--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "preview": "vite preview",
     "prepare": "husky",
     "test": "vitest",
+    "test:coverage": "vitest --coverage",
     "predeploy": "npm run build",
     "deploy": "gh-pages -d dist"
   },
